@@ -9,21 +9,23 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.openspg.idea.lang.psi.SchemaPlainText;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 import static org.openspg.idea.grammar.psi.SchemaTypes.EOL;
 
 public class SchemaBlock extends AbstractBlock {
 
-    private static final Set<IElementType> NONBLOCK_ELEMENT_TYPES = new HashSet<>(Arrays.asList(
+    private static final Set<IElementType> NONBLOCK_ELEMENT_TYPES = Set.of(
             TokenType.WHITE_SPACE, EOL
-    ));
+    );
 
-    private final SpacingBuilder spacingBuilder;
+    private final SpacingBuilder mySpacingBuilder;
 
     protected SchemaBlock(@NotNull ASTNode node, @Nullable Wrap wrap, @Nullable Alignment alignment, SpacingBuilder spacingBuilder) {
         super(node, wrap, alignment);
-        this.spacingBuilder = spacingBuilder;
+        mySpacingBuilder = spacingBuilder;
     }
 
     @Override
@@ -41,7 +43,7 @@ public class SchemaBlock extends AbstractBlock {
                         child,
                         Wrap.createWrap(WrapType.NONE, false),
                         Alignment.createAlignment(),
-                        spacingBuilder
+                        mySpacingBuilder
                 ));
             }
             child = child.getTreeNext();
@@ -58,7 +60,7 @@ public class SchemaBlock extends AbstractBlock {
     @Nullable
     @Override
     public Spacing getSpacing(@Nullable Block firstChild, @NotNull Block secondChild) {
-        return spacingBuilder.getSpacing(this, firstChild, secondChild);
+        return mySpacingBuilder.getSpacing(this, firstChild, secondChild);
     }
 
     @Override
